<resources>
    <string name="app_name">外业记录系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">输入用户账户</string>
    <string name="login_pwd">输入密码</string>
    <string name="login">登   录</string>
    <string name="retry">重新拍摄</string>
    <string name="use">保存</string>
    <string name="xh">序 号</string>
    <string name="itemname">项目名称</string>
    <string name="plandate_begin">计划开始日期</string>
    <string name="plandate_end">计划结束日期</string>
    <string name="item_user">项目负责人</string>
    <string name="item_state">项目参与人员</string>
    <string name="check_contrn">检查内容</string>
    <string name="check_yq">检查要求</string>
    <string name="taskname">任务名称</string>
    <string name="taskdate_begin">计划开始日期</string>
    <string name="taskdate_end">计划结束日期</string>
    <string name="taskdate_execute">执行日期</string>
    <string name="task_team">执行班组</string>
    <string name="check_user">检查人员</string>
    <string name="recond_user">记录人员</string>
    <string name="task_wd">温度（湿度）</string>
    <string name="task_fl">风力</string>
    <string name="task_tq">天气</string>
    <string name="dis_gj_type">构件类型</string>
    <string name="dis_gj_code">构件编号</string>
    <string name="dis_dis_wz">病害位置</string>
    <string name="dis_dis_sx">病害属性</string>
    <string name="dis_pict_name">照片名称</string>
    <string name="dis_dept_kj">跨</string>
    <string name="dis_dept_p">片</string>
    <string name="dis_cfw">侧面方位</string>
    <string name="dis_front">距前</string>
    <string name="dis_rear">距后</string>
    <string name="dis_left">距上(左)</string>
    <string name="dis_right">距下(右)</string>
    <string name="dis_bhtype">病害类型</string>
    <string name="dis_bhcount">病害数量</string>
    <string name="dis_Scale">评定标度</string>
    <string name="dis_memo">备注</string>
    <string name="dis_lenght">长</string>
    <string name="dis_with">宽</string>
    <string name="dis_deep">深</string>
    <string name="intenterror">网络异常，请稍后再试</string>
    <string name="success">登陆成功!</string>
    <string name="xjadd">增加</string>
    <string name="xjedit">修改</string>
    <string name="xj_time">巡检日期</string>
    <string name="bridge_type">桥梁类型</string>
    <string name="bridge_name">桥梁名称</string>
    <string name="bridge_name_hint">请点击选择桥梁</string>
    <string name="bridge_code">桥梁编号</string>
    <string name="bridge_code_hint">请输入桥梁编号</string>
    <string name="bridge_xlName">线路名称</string>
    <string name="login_empty">名称不能为空</string>
    <string name="bridge_ZhuangHao">中心桩号</string>
    <string name="bridge_YhDept">养护单位</string>
    <string name="bridge_User">记录人</string>
    <string name="bridge_liang">梁式桥</string>
    <string name="bridge_gong">拱式桥</string>
    <string name="bridge_xuansuo">悬索桥</string>
    <string name="bridge_xiela">斜拉桥</string>
    <string name="bridge_jcxj_name">桥梁名称</string>
    <string name="bridge_jcxj_user">负责人</string>
    <string name="bridge_jcxj_date">巡检日期</string>
    <string name="bridge_jcxj_bjname">部件名称</string>
    <string name="bridge_jcxj_jxtype">缺损类型</string>
    <string name="bridge_jcxj_jxfw">缺损范围</string>
    <string name="bridge_jcxj_byidea">措施意见</string>
    <string name="bridge_jcxj_zl">主梁</string>
    <string name="bridge_jcxj_hgb">横隔板</string>
    <string name="bridge_jcxj_sjf">湿接缝</string>
    <string name="bridge_jcxj_zz">支座</string>
    <string name="bridge_jcxj_jqrq">翼墙耳墙</string>
    <string name="bridge_jcxj_zphp"> 锥坡、护坡</string>
    <string name="bridge_jcxj_qdjc">桥墩及基础</string>
    <string name="bridge_jcxj_qtjc">桥台及基础</string>
    <string name="bridge_jcxj_hc">河床</string>
    <string name="bridge_jcxj_tzgzw">调治构造物</string>
    <string name="bridge_jcxj_qmpz">桥面铺装</string>
    <string name="bridge_jcxj_ssf">伸缩缝</string>
    <string name="bridge_jcxj_rxd">人行道路缘</string>
    <string name="bridge_jcxj_lghl">栏杆、护栏</string>
    <string name="bridge_jcxj_psxt">排水系统</string>
    <string name="bridge_jcxj_zmbz">照明标志</string>
    <string name="bridge_jcxj_zgq">主拱圈</string>
    <string name="bridge_jcxj_gsjg">拱上结构</string>
    <string name="bridge_jcxj_qmb">桥面板</string>
    <string name="bridge_jcxj_mj">锚具</string>
    <string name="bridge_jcxj_slht">拉索护套</string>
    <string name="bridge_jcxj_jzzz">减震装置</string>
    <string name="bridge_jcxj_zt">主塔</string>
    <string name="bridge_jcxj_st">索塔</string>
    <string name="bridge_jcxj_xls">斜拉索</string>
    <string name="bridge_jcxj_jjl">加劲梁</string>
    <string name="bridge_jcxj_qst">桥(索)塔</string>
    <string name="bridge_jcxj_za">主鞍</string>
    <string name="bridge_jcxj_zul">主缆</string>
    <string name="bridge_jcxj_ds">吊索</string>
    <string name="bridge_jcxj_ghj">钢护筒，锚杆</string>
    <string name="bridge_jcxj_md">锚碇</string>
    <string name="bridge_jcxj_stjc">索塔基础</string>
    <string name="bridge_jcxj_ssa">散索鞍</string>
    <string name="btn_query">查   询</string>
    <string name="btn_save">保   存</string>
    <string name="btn_passwx">位   置</string>
    <string name="btn_photo">图   片</string>
    <string name="btn_passphoto">上传图片</string>
    <string name="btn_camera">相   机</string>
    <string name="btn_files">本   地</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
    <string name="ic_directions_train">&#xe066;</string>
    <string name="ic_directions_transit">&#xe067;</string>
    <string name="ic_directionswalk">&#xe068;</string>
    <string name="ic_disc_full">&#xe069;</string>
    <string name="ic_do_not_disturb">&#xe06a;</string>
    <string name="ic_dock">&#xe06b;</string>
    <string name="ic_domain">&#xe06c;</string>
    <string name="ic_done">&#xe06d;</string>
    <string name="ic_done_all">&#xe06e;</string>
    <string name="ic_drafts">&#xe06f;</string>
    <string name="ic_drive">&#xe070;</string>
    <string name="ic_drive_apk">&#xe071;</string>
    <string name="ic_drive_audio">&#xe072;</string>
    <string name="ic_drive_code">&#xe073;</string>
    <string name="ic_drive_document">&#xe074;</string>
    <string name="ic_drive_drawing">&#xe075;</string>
    <string name="ic_drive_eta">&#xe076;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_drive_font">&#xe078;</string>
    <string name="ic_drive_form">&#xe079;</string>
    <string name="ic_drive_fusiontable">&#xe07a;</string>
    <string name="ic_drive_image">&#xe07b;</string>
    <string name="ic_drive_ms_excel">&#xe07c;</string>
    <string name="ic_drive_ms_powerpoint">&#xe07d;</string>
    <string name="ic_drive_ms_word">&#xe07e;</string>
    <string name="ic_drive_pdf">&#xe07f;</string>
    <string name="ic_drive_presentation">&#xe080;</string>
    <string name="ic_drive_script">&#xe081;</string>
    <string name="ic_drive_site">&#xe082;</string>
</resources>