<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/log_bgs"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="版本号:20180626"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="90dp"
            android:layout_marginRight="120dp"
            android:background="@mipmap/log_lin_bg"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="用户登录 Login"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="225dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_editview"
                android:gravity="center_vertical"
                android:hint="@string/login_username"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#707070"
                android:textSize="13sp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="225dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_editview"
                android:gravity="center_vertical"
                android:hint="@string/login_pwd"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#707070"
                android:textSize="13sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>